[tool.poetry]
name = "xoinvader"
version = "0.2.0"
description = "(not so) small python curses space game"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/pkulev/xoinvader"
homepage = "https://github.com/pkulev/xoinvader"
documentation = "http://mmap.me/"

keywords = ["curses", "space", "game"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Arcade",
]

[tool.poetry.scripts]
xoigame = "xoinvader.game:main"

[tool.poetry.dependencies]
python = "^3.7"
eaf = "^0.2.1"
xo1 = "^0.2"
toml = "^0.10"

[tool.poetry.dev-dependencies]
codecov = "*"
flake8 = "*"
pylint = "*"
pytest = "*"
pytest-coverage = "*"
pytest-pylint = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
